Add SubjectAwareRequestHandler abstract class. Add javaFixtures to commons
